# classevy

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  Recipes_for_the_planet.ipynb  init.sh  mypy.ini  pyproject.toml  requirements.txt  uwsgi.ini
classevy/: __init__.py  klas.py
data/: best_plan.xlsx  students.csv  students_example.csv  students_example.xlsx  students_no_cond.csv  students_short.csv  students_short_hard.csv  students_short_impossible.csv  students_wrong.csv  web_best_plan.xlsx
examples/: Recipes_for_the_planet.ipynb  assign_classes.py  optimize_class.ipynb  optimize_class_evy.ipynb  optimize_class_evy_size.ipynb  test_klas.ipynb  web_flow.ipynb
profiling/: assign_classes.py  profile_main.py  profile_update_pref_sat.py
src/classevy/: __init__.py  helpers.py  klas.py  web.py
src/classevy/static/: mystyle.css
src/classevy/templates/: base.html  forms.html  intro.md  loading.html  read.html  results_table.html  running.html  simple.html  start.html  table.html
tests/: helpers_unittest.py  klas_unittest.py
